--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.scss">
+    <link rel="stylesheet" href="/Styles/style.css">
     <title>Davon Burks Portfolio</title>
 </head>
 <body>
     <header>
         <nav>
             <a href="" id="logo">Davon Burks</a>
-            <a href="">About</a>
-            <a href="">work</a>
-            <a href="">contact</a>
+            <div class="nav-menu">
+                <a href="">About</a>
+                <a href="">work</a>
+                <a href="">contact</a>
+            </div>
         </nav>
     </header>
     <main>
