Started working on work section of Portfolio

--- a/index.html
+++ b/index.html
@@ -75,27 +75,27 @@
                     </ul>
                 </div>
         </section>
-        <section class="section-container">
+        <section id="Work">
                 <div class="section-header">
                     <h2 class="section-title">My Work</h2>
                 </div>
                 <div class="work-card-full">
-                    <div class="work-card-full-left">
-                        <p class="work-card-full-title">Personal Portfolio</p>
-                        <p class="work-card-full-desc">This website is my personal portfolio i created using Assesible html5, css, and javascript.</p>
-                        <button class="work-card-full-button">Visit Website</button>
-                        <ul class="work-card-full-skills">
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>JavaScript</li>
-                            <li>JQuery</li>
-                            <li>SASS</li>
-                            <li>Git</li>
-                        </ul>
+                        <div class="work-card-full-body">
+                            <p class="work-card-full-title">Personal Portfolio</p>
+                            <p class="work-card-full-desc">This website is my personal portfolio i created using Assesible html5, css, and javascript.</p>
+                            <button class="work-card-full-btn">Visit Website</button>
+                        <div class="work-card-full-img">
+                            <img src="#">
+                        </div>
                     </div>
-                    <div class="work-card-full-img">
-                        <img src="">
-                    </div>
+                    <ul class="work-card-full-skills">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>JQuery</li>
+                        <li>SASS</li>
+                        <li>Git</li>
+                    </ul>
                 </div>
                 <br>
                 <div class="work-card-container">
