Added Some responsive breakpoints to website

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <section  class="section-container">
             <div id="hero-section">
-                <h1 id="hero-header-text">I am a Front-End Engineer</h1>
+                <p id="hero-header-text">I am a Front-End Engineer</p>
                 <div id="hero-buttons">
                     <button class="hero-btn">More about me</button>
                     <button class="hero-btn">My work</button>
@@ -31,7 +31,7 @@
         </section>
         <section id="About">
             <div class="section-header">
-                <h2 class="section-title">About Me</h2>
+                <p class="section-title">About Me</p>
             </div>
                 <div id="about-section-cards">
                         <div class="about-card">
@@ -78,7 +78,7 @@
         </section>
         <section id="Work">
                 <div class="section-header">
-                    <h2 class="section-title">My Work</h2>
+                    <p class="section-title">My Work</p>
                 </div>
                 <div class="work-card-full">
                         <div class="work-card-full-body">
@@ -132,7 +132,7 @@
                             <p class="work-card-title">UI Design for To-Do Webapp</p>
                             <p class="work-card-desc">This is user interface design I created for a prodtivity app I am building called FocusDeer.</p>
                             <i class="fa-solid fa-pen"></i>
-                            <button class="work-card-button">Visit Design</button> 
+                            <a class="work-card-button">Visit Design</a> 
                         </div>
                         <ul class="work-card-skills">
                             <li>Figma</li>
@@ -142,10 +142,10 @@
                     </div>
                     <div class="work-card">
                         <div class="work-card-body">
-                            <p class="work-card-title">UI Design for Social Media analytics webapp</p>
+                            <p class="work-card-title">UI Design for SM analytics webapp</p>
                             <p class="work-card-desc">UI design for social media web design app I am currently working on called famemust </p>
                             <i class="fa-solid fa-pen"></i>
-                            <button class="work-card-button">Visit Design</button> 
+                            <a class="work-card-button">Visit Design</a> 
                         </div>
                         <ul class="work-card-skills">
                             <li>Adobe XD</li>
@@ -157,7 +157,7 @@
                             <p class="work-card-title">Email Design for Story Notes project</p>
                             <p class="work-card-desc">This is a HTML email design I created for an project under construction called Story NOtes.</p>
                             <i class="fa-solid fa-envelope"></i>
-                            <button class="work-card-button">Visit Design</button> 
+                            <a class="work-card-button">Visit Design</a> 
                         </div>
                         <ul class="work-card-skills">
                             <li>HTML</li>
@@ -170,7 +170,7 @@
                             <p class="work-card-title">Email design for LMS project</p>
                             <i class="fa-solid fa-envelope"></i>
                             <p class="work-card-desc">Email Design I created for my project called EverStudent. </p>
-                            <button class="work-card-button">Visit Design</button> 
+                            <a class="work-card-button">Visit Design</a> 
                         </div>
                         <ul class="work-card-skills">
                             <li>HTML</li>
@@ -182,7 +182,7 @@
         </section>
         <section id="Contact">
                 <div class="section-header">
-                    <h2 class="section-title">Contact Me</h2>
+                    <p class="section-title">Contact Me</p>
                 </div>
                 <div class="contact-btn-list">
                     <a  href="mailto:burksdavon29@yahoo.com"  class="contact-btn"><i class="fa-solid fa-envelope-open-text"></i>MEssage me Here</a>
