Add More Responsiveness to website

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <header>
+            <a class="toggle-button">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
                 <a href="#" id="logo">Davon Burks</a>
         <nav id="navbar">    
             <ul>
@@ -24,8 +29,8 @@
             <div id="hero-section">
                 <p id="hero-header-text">I am a Front-End Engineer</p>
                 <div id="hero-buttons">
-                    <button class="hero-btn">More about me</button>
-                    <button class="hero-btn">My work</button>
+                    <a class="hero-btn" href="#About">More about me</a>
+                    <a class="hero-btn" href="#Work">My work</a>
                 </div>
             </div>
         </section>
@@ -142,8 +147,8 @@
                     </div>
                     <div class="work-card">
                         <div class="work-card-body">
-                            <p class="work-card-title">UI Design for SM analytics webapp</p>
-                            <p class="work-card-desc">UI design for social media web design app I am currently working on called famemust </p>
+                            <p class="work-card-title">UI Design for SMA webapp</p>
+                            <p class="work-card-desc">UI design for social media analytics app I am currently working on called famemust </p>
                             <i class="fa-solid fa-pen"></i>
                             <a class="work-card-button">Visit Design</a> 
                         </div>
@@ -154,8 +159,8 @@
                     </div>
                     <div class="work-card">
                         <div class="work-card-body">
-                            <p class="work-card-title">Email Design for Story Notes project</p>
-                            <p class="work-card-desc">This is a HTML email design I created for an project under construction called Story NOtes.</p>
+                            <p class="work-card-title">Email Design for SN project</p>
+                            <p class="work-card-desc">This is a HTML email design I created for an project under construction</p>
                             <i class="fa-solid fa-envelope"></i>
                             <a class="work-card-button">Visit Design</a> 
                         </div>
@@ -186,8 +191,8 @@
                 </div>
                 <div class="contact-btn-list">
                     <a  href="mailto:burksdavon29@yahoo.com"  class="contact-btn"><i class="fa-solid fa-envelope-open-text"></i>MEssage me Here</a>
-                    <a href="https://www.linkedin.com/in/davonburks/" class="contact-btn" target="_blank"><i class="fa-brands fa-linkedin"></i>Vist my linkedin page</a>
-                    <a href="https://github.com/davonburks" class="contact-btn" target="_blank"><i class="fa-brands fa-github"></i>vist my github page</a>
+                    <a href="https://www.linkedin.com/in/davonburks/" class="contact-btn" target="_blank"><i class="fa-brands fa-linkedin"></i>Visit my linkedin page</a>
+                    <a href="https://github.com/davonburks" class="contact-btn" target="_blank"><i class="fa-brands fa-github"></i>Visit my github page</a>
                 </div>
         </section>
     </main>
