Working on Responsive Nav

--- a/index.html
+++ b/index.html
@@ -6,23 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/8b2721ea28.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="Styles/style.css">
+    <script src="script/script.js" type="text/javascript"></script>
     <title>Davon Burks Portfolio</title>
 </head>
 <body>
     <header>
-            <a class="toggle-button">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-                <a href="#" id="logo">Davon Burks</a>
-        <nav id="navbar">    
-            <ul>
-                <li class="nav-links"><a href="#About">About</a></li>
-                <li class="nav-links"><a href="#Work">Work</a></li>
-                <li class="nav-links"><a href="#Contact">Contact</a></li>
-            </ul>
-        </nav>
+            <nav class="navbar">  
+                <div class="brand-title">Davon Burks</div>
+                    <a href="#" class="toggle-button">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </a>
+                <div class="nav-links">
+                    <ul>
+                        <li><a href="#About">About</a></li>
+                        <li><a href="#Work">Work</a></li>
+                        <li><a href="#Contact">Contact</a></li>
+                    </ul>
+                </div>
+             </nav>
     </header>
     <main>
         <section  class="section-container">
