Added links to work buttons

--- a/index.html
+++ b/index.html
@@ -137,23 +137,23 @@
                     </div>
                     <div class="work-card">
                         <div class="work-card-body">
-                            <p class="work-card-title">UI Design for To-Do Webapp</p>
-                            <p class="work-card-desc">This is user interface design I created for a prodtivity app I am building called FocusDeer.</p>
-                            <i class="fa-solid fa-pen"></i>
-                            <a class="work-card-button">Visit Design</a> 
+                            <p class="work-card-title">Prokeckog Wordpress Website</p>
+                            <p class="work-card-desc">An Wordpress website for digital marketing company</p>
+                            <i class="fa-solid fa-desktop"></i>
+                            <a class="work-card-button" href="https://projeckog.com" target="_blank">Visit Website</a> 
                         </div>
                         <ul class="work-card-skills">
-                            <li>Figma</li>
-                            <li>Font-awesome</li>
-                            <li>Photoshop</li>
+                            <li>WordPress</li>
+                            <li>CSS</li>
+                            <li>Elementor</li>
                         </ul>
                     </div>
                     <div class="work-card">
                         <div class="work-card-body">
-                            <p class="work-card-title">UI Design for SMA webapp</p>
-                            <p class="work-card-desc">UI design for social media analytics app I am currently working on called famemust </p>
+                            <p class="work-card-title">UI Design for To-Do Webapp</p>
+                            <p class="work-card-desc">This is user interface design I created for a prodtivity app I am building called FocusDeer. </p>
                             <i class="fa-solid fa-pen"></i>
-                            <a class="work-card-button">Visit Design</a> 
+                            <a class="work-card-button" href="https://www.figma.com/proto/U9HzzWPLJeT7PpvLMPkmOS/Focus-Deer?node-id=4%3A3" target="_blank">Visit Design</a> 
                         </div>
                         <ul class="work-card-skills">
                             <li>Adobe XD</li>
