Added Email design to portfolio

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             <p class="work-card-title">Email Design for SN project</p>
                             <p class="work-card-desc">This is a HTML email design I created for an project under construction</p>
                             <i class="fa-solid fa-envelope"></i>
-                            <a class="work-card-button">Visit Design</a> 
+                            <a class="work-card-button" href="storynotesemail.html" target="_blank">Visit Design</a> 
                         </div>
                         <ul class="work-card-skills">
                             <li>HTML</li>
