Added Link to Work section

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             <p class="work-card-title">Email design for LMS project</p>
                             <i class="fa-solid fa-envelope"></i>
                             <p class="work-card-desc">Email Design I created for my project called EverStudent. </p>
-                            <a class="work-card-button">Visit Design</a> 
+                            <a class="work-card-button" href="everstudentemail.html" target="_blank">Visit Design</a> 
                         </div>
                         <ul class="work-card-skills">
                             <li>HTML</li>
